REGRESSION (r177876): 35% regression in Parser/html5-full-render https://bugs.webkit.org/show_bug.cgi?id=140123

Reviewed by Darin Adler.

Resolving system fallbacks is extremely slow. GlyphPageTree used to cache them globally.

This patch brings back a simple global cache for system fallbacks.

* platform/graphics/SimpleFontData.cpp:
(WebCore::SimpleFontData::~SimpleFontData):
(WebCore::systemFallbackCache):
(WebCore::SimpleFontData::systemFallbackFontDataForCharacter):
(WebCore::SimpleFontData::removeFromSystemFallbackCache):
* platform/graphics/SimpleFontData.h:



Canonical link: https://commits.webkit.org/158103@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@177979 268f45cc-cd09-0410-ab3c-d52691b4dbfc